# TheGrocer

./: README.md  main.py  manage.py  pyproject.toml  requirements.txt
TheGrocer/: asgi.py  build_files.sh  settings.py  urls.py  vercel.json  wsgi.py
accounts/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: buyerlogin.html  buyersignup.html  grocerlogin.html  grocersignup.html  index.html
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
